--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Zakacat's Super Wonderful Personal Website</h1>
+<p>Consider this website my work in progress. I will also learn to write HTML and create a basic website that can showcase all of my relevant and non-relevant skills.</p>
 </body>
 </html>
