--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <body>
 <h1 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h1>
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 <img src="seriousCat.png" width="500" height="500" class="center">
 <p style="text-align:center;">Consider this website my work in progress. I will also learn to write HTML and create a basic website that can showcase all of my relevant and non-relevant skills.</p>
 </body>
