--- a/mainPage.html
+++ b/mainPage.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
 <body>
+  <style>
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+</style>
 <h1 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h1>
-<img src="seriousCat.png" width="500" height="500" class="center">
+<img src="seriousCat.png" width="500" height="500" alt="seriousCat">
 <p style="text-align:center;">Consider this website my work in progress. I will also learn to write HTML and create a basic website that can showcase all of my relevant and non-relevant skills.</p>
 </body>
 </html>
