--- a/mainPage.html
+++ b/mainPage.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-<body>
-  <style>
+  
+<head>
+<style>
 img {
+  border-radius: 25%;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
 </style>
+</head>
+      
+<body>
 <h1 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h1>
 <img src="seriousCat.png" width="500" height="500" alt="seriousCat">
 <p style="text-align:center;">Consider this website my work in progress. I will also learn to write HTML and create a basic website that can showcase all of my relevant and non-relevant skills.</p>
 </body>
+  
 </html>
