--- a/mainPage.html
+++ b/mainPage.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <html>
   
-<head>
+<!<head>
 <style>
 img {
   border-radius: 25%;
@@ -11,7 +11,7 @@ img {
   margin-right: auto;
 }
 </style>
-</head>
+</head>>
       
 <body>
 <h1 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h1>
