--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@ body, html {
   height: 100%;
 }
 
-#Home {background-color: red;}
-#News {background-color: green;}
-#Contact {background-color: blue;}
-#About {background-color: orange;}
+#Home {background-color: pink;}
+#News {background-color: lightgreen;}
+#Contact {background-color: lightblue;}
+#About {background-color: #CCFB5D;}
 </style>
 </head>
 <body>
 
-<button class="tablink" onclick="openPage('Home', this, 'red')">Home</button>
-<button class="tablink" onclick="openPage('News', this, 'green')" id="defaultOpen">News</button>
-<button class="tablink" onclick="openPage('Contact', this, 'blue')">Contact</button>
-<button class="tablink" onclick="openPage('About', this, 'orange')">About</button>
+<button class="tablink" onclick="openPage('Home', this, '#E55451')" id="defaultOpen">Home</button>
+<button class="tablink" onclick="openPage('News', this, '#41A317')">News</button>
+<button class="tablink" onclick="openPage('Contact', this, '#2B60DE')">Contact</button>
+<button class="tablink" onclick="openPage('About', this, '#9DC209')">About</button>
 
 <div id="Home" class="tabcontent">
 <head>
