--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ body, html {
 <body>
 
 <button class="tablink" onclick="openPage('Home', this, '#E55451')" id="defaultOpen">Home</button>
-<button class="tablink" onclick="openPage('Past Projects', this, '#41A317')">News</button>
+<button class="tablink" onclick="openPage('Past Projects', this, '#41A317')">Past Projects</button>
 <button class="tablink" onclick="openPage('Contact', this, '#2B60DE')">Contact</button>
 <button class="tablink" onclick="openPage('About', this, '#9DC209')">About</button>
 
