--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body, html {
 }
 
 #Home {background-color: pink;}
-#News {background-color: #89C35C;}
+#PastProjects {background-color: #89C35C;}
 #Contact {background-color: lightblue;}
 #About {background-color: #CCFB5D;}
 </style>
@@ -46,7 +46,7 @@ body, html {
 <body>
 
 <button class="tablink" onclick="openPage('Home', this, '#E55451')" id="defaultOpen">Home</button>
-<button class="tablink" onclick="openPage('Past Projects', this, '#41A317')">Past Projects</button>
+<button class="tablink" onclick="openPage('PastProjects', this, '#41A317')">Past Projects</button>
 <button class="tablink" onclick="openPage('Contact', this, '#2B60DE')">Contact</button>
 <button class="tablink" onclick="openPage('About', this, '#9DC209')">About</button>
 
@@ -66,7 +66,7 @@ img {
   <p style="text-align:center;">Consider this website my work in progress. I will also learn to write HTML and create a basic website that can showcase all of my relevant and non-relevant skills.</p>
 </div>
 
-<div id="Past Projects" class="tabcontent">
+<div id="PastProjects" class="tabcontent">
 
 <style>
 img {
