--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ body, html {
 
 <div id="Home" class="tabcontent">
 <style>
+  .box_textshadow {
+     text-shadow: 2px 2px 0px #FF0000; /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
+}
 img {
   border-radius: 25%;
   display: block;
