--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@ body, html {
   height: 100%;
 }
 
-#Home {background-color: pink;}
+#Home {background-color: #F75D59;}
 #PastProjects {background-color: #89C35C;}
-#OngoingProjects {background-color: lightblue;}
-#AboutMe {background-color: #CCFB5D;}
+#OngoingProjects {background-color: #2554C7;}
+#AboutMe {background-color: #FBB117;}
 </style>
 </head>
 <body>
@@ -52,9 +52,6 @@ body, html {
 
 <div id="Home" class="tabcontent">
 <style>
-  .box_textshadow {
-     text-shadow: 2px 2px 0px #FF0000; /* FF3.5+, Opera 9+, Saf1+, Chrome, IE10 */
-}
 img {
   border-radius: 25%;
   display: block;
