--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
 <button class="tablink" onclick="openPage('Home', this, '#E55451')" id="defaultOpen">Home</button>
 <button class="tablink" onclick="openPage('PastProjects', this, '#41A317')">Past Projects</button>
 <button class="tablink" onclick="openPage('OngoingProjects', this, '#2B60DE')">Ongoing Projects</button>
-<button class="tablink" onclick="openPage('AboutMe', this, '#9DC209')">About Me</button>
+<button class="tablink" onclick="openPage('AboutMe', this, '#FFA500')">About Me</button>
 
 <div id="Home" class="tabcontent">
 <style>
