--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body, html {
 #Home {background-color: #F75D59;}
 #Projects {background-color: #89C35C;}
 #Contributions {background-color: #2554C7;}
-#Experience {background=color: #6667AB;}  
+#Experience {background0-color: #6667AB;}  
 #AboutMe {background-color: #FBB117;}
   
 </style>
