--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@ body, html {
 
 <div id="Home" class="tabcontent">
 <style>
+ img{
+   border-radius: 25%;
+ }
 .image1 {
-  border-radius: 25%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -64,6 +66,7 @@ body, html {
 .image2
 {
   float: left;
+  margin-right:20px;
 }
 </style>
   <h2 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h2>
