--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@ body, html {
 {
   float: left;
   margin-right:20px;
+  width: 150px;
+  height: 150px;
 }
 </style>
   <h2 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h2>
