--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ body, html {
   margin-left: auto;
   margin-right: auto;
   float: none;
-  width: 500px; 
-  height: 500px;
+  width: 25%; 
+  height: 25%;
 }
 .image2
 {
@@ -89,6 +89,7 @@ body, html {
   <img src="NIC.png"  alt="NIC Logo" class="image2" /></a>
   <p style="text-align:left;">North Island College is a community college on Vancouver Island where I achieved my engineering first year equivalent. I also worked on a couple paid research projects during my time there.</p>
   <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
+  <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean co2 sensor.</p>
 </div>
 
 <div id="Contributions" class="tabcontent">
