--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@ body, html {
   margin-left: auto;
   margin-right: auto;
   float: none;
-  width: 25%; 
-  height: 25%;
+  width: 500px; 
+  height: 500px;
 }
 .image2
 {
