--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ body, html {
   <p style="text-align:left;">I am currently a Software Engineering student at the University of Victoria
   in British Columbia, Canada. I am 32 years old. I am an avid runnner. I enjoy movies, travelling, socializing, and puzzles.
    My long term goal is to have a well-payed, remote job where I have significant responsibility
- and I can travel to different countries for months at a time while still pursuing my carrer. For a deeper insight into
+ and I can travel to different countries for months at a time while still pursuing my career. For a deeper insight into
  who I am as a person, you can follow me on the below social medias.</p>
  <br>
 <img src="https://logonoid.com/images/thumbs/youtube-logo.png"  alt="YouTube Logo" class="image2" /></a>
