--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@ body, html {
   height: 50%;
   border-radius: 5%;
 }
+.image4
+{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  float: none;
+  width: 50vw;
+  height: 30vw;
+  border-radius: 5%;
+}
 </style>
   <h2 style="text-align:center;">Zakacat's Super Wonderful Personal Website</h2>
   <img src="seriousCat.png" alt="seriousCat" class="image1">
@@ -120,9 +130,9 @@ body, html {
   <img src="technicalDrawings/Fuck.jpg" width="500" height"500"alt="Fuck" class="image3">
   <p style="font-size:80%; text-align:center;">An isometric drawing of the word fuck. It made for a good sticker!</p>
   <h3 style="txt-align:left;">Arduino</h3>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/jvHsBcfcCW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image3"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/jvHsBcfcCW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
   <p style="font-size:80%; text-align:center;">A video of some of the basics of Arduino. It includes code.</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/VdxbjapIjAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image3"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/VdxbjapIjAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
   <p style="font-size:80%; text-align:center;">A video of some more basics of Arduino, but a bit more difficult.</p>
   <h3 style="txt-align:left;">Code Examples</h3>
 </div>
