--- a/index.html
+++ b/index.html
@@ -195,31 +195,31 @@ body, html {
   <p style="font-size:90%; text-align:left;">SENG 265 Software Development Methods</p>
   <p style="font-size:90%; text-align:left;">SOCI 220 Media & Contemporary Society</p>
   <h3 style="txt-align:left;">NIC Engineering Foundations Certificate</h3>
-  <img src="certifications/Engineering Foundations NIC.jpg" width="500" height"500"alt="EngineeringFoundationsCertificate" class="image3">
+  <a href="certifications/Engineering Foundations NIC.jpg" target="_blank"><img src="certifications/Engineering Foundations NIC.jpg" width="500" height"500"alt="EngineeringFoundationsCertificate" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Certificate as proof of completion of NIC's Engineering Foundations Program. 1st year Enigineering Degree Equivalent</p>
-  <img src="certifications/Transcripts NIC June 2, 2022_Redacted.jpg" width="500" height"500"alt="NICTranscript" class="image3">
+  <a href="certifications/Transcripts NIC June 2, 2022_Redacted.jpg" target="_blank"><img src="certifications/Transcripts NIC June 2, 2022_Redacted.jpg" width="500" height"500"alt="NICTranscript" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Official Transcript from NIC. Note the courses of which I dropped out from in 2009. Second time's a charm!</p>
-  <img src="certifications/Deans Honour Roll Letter.jpg" width="500" height"500"alt="Dean'sHonRollLett" class="image3">
+  <a href="certifications/Deans Honour Roll Letter.jpg" target="_blank"><img src="certifications/Deans Honour Roll Letter.jpg" width="500" height"500"alt="Dean'sHonRollLett" class="image3"></a>
   <p style="font-size:80%; text-align:center;">A letter of confirmation for making Dean's Honour Role.</p>
-  <img src="certifications/Chemistry 060.jpg" width="500" height"500"alt="Chem060" class="image3">
+  <a href="certifications/Chemistry 060.jpg" target="_blank"><img src="certifications/Chemistry 060.jpg" width="500" height"500"alt="Chem060" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Chemistry 12</p>
-  <img src="certifications/Computer Sciences 101.jpg" width="500" height"500"alt="CompSci101" class="image3">
+  <a href="certifications/Computer Sciences 101.jpg" target="_blank"><img src="certifications/Computer Sciences 101.jpg" width="500" height"500"alt="CompSci101" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Computer Science 2</p>
-  <img src="certifications/Engineering 101.jpg" width="500" height"500"alt="Eng101" class="image3">
+  <a href="certifications/Engineering 101.jpg" target="_blank"><img src="certifications/Engineering 101.jpg" width="500" height"500"alt="Eng101" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Engineering Design 2</p>
-  <img src="certifications/Math 151.jpg" width="500" height"500"alt="Math151" class="image3">
+  <a href="certifications/Math 151.jpg" target="_blank"><img src="certifications/Math 151.jpg" width="500" height"500"alt="Math151" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Finite Math</p>
-  <img src="certifications/Math 181.jpg" width="500" height"500"alt="Math181" class="image3">
+  <a href="certifications/Math 181.jpg" target="_blank"><img src="certifications/Math 181.jpg" width="500" height"500"alt="Math181" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Calculus 1</p>
-  <img src="certifications/Physics 141.jpg" width="500" height"500"alt="Physics141" class="image3">
+  <a href="certifications/Physics 141.jpg" target="_blank"><img src="certifications/Physics 141.jpg" width="500" height"500"alt="Physics141" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Top of Class: Static Physics</p>
   <h3 style="txt-align:left;">Red Seal Journeyman Iron Worker</h3>
-  <img src="certifications/Certificate of Apprenticeship Iron Worker Generalist.jpg" width="500" height"500"alt="IronWorkerGeneralist" class="image3">
+  <a href="certifications/Certificate of Apprenticeship Iron Worker Generalist.jpg" target="_blank"><img src="certifications/Certificate of Apprenticeship Iron Worker Generalist.jpg" width="500" height"500"alt="IronWorkerGeneralist" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Proof of Apprenticeship implies that aside from the schooling, I completed my 3600 plus hours in an iron worker role.</p>
-  <img src="certifications/Certificate of Qualification Iron Worker Generalist.jpg" width="500" height"500"alt="IronWorkerGeneralist2" class="image3">
+  <a href="certifications/Certificate of Qualification Iron Worker Generalist.jpg" target="_blank"><img src="certifications/Certificate of Qualification Iron Worker Generalist.jpg" width="500" height"500"alt="IronWorkerGeneralist2" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Proof of Qaulification implies that I completed the examinations to graduate as Red Seal and Journeyman.</p>
-  <h3 style="txt-align:left;">TESL Instructor</h3>
-  <img src="certifications/ESL.jpg" width="500" height"500"alt="TESOL" class="image3">
+  <h3 style="txt-align:left;">TESOL Instructor</h3>
+  <a href="certifications/ESL.jpg" target="_blank"><img src="certifications/ESL.jpg" width="500" height"500"alt="TESOL" class="image3"></a>
   <p style="font-size:80%; text-align:center;">Proof of TESOL certification. With this I taught English for an extended period in Colombia.</p>
   <a href="certifications/ELASH II.jpg" target="_blank"><img src="certifications/ELASH II.jpg" width="500" height"500"alt="Physics141" class="image3"></a>
   <p style="font-size:80%; text-align:center;">This certification is more important to English instructors whom their first language is not English. However, I received the highest mark of all the instructors at the institute that I worked at.</p>
