Added images to About Me

--- a/index.html
+++ b/index.html
@@ -263,6 +263,34 @@ body, html {
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p style="text-align:left;">Here are some photos of me doing some of the things that I am passionate about.</p>
+<h3 style="txt-align:left;">Running</h3>
+<a href="personal/running.png" target="_blank"><img src="personal/running.png" width="500" height"500"alt="running" class="image3"></a>
+<p style="font-size:80%; text-align:center;">Completing my first full marathon in Medellin, Colombia</p>
+<h3 style="txt-align:left;">Teaching</h3>
+<a href="personal/teaching.png" target="_blank"><img src="personal/teaching.png" width="500" height"500"alt="teaching" class="image3"></a>
+<p style="font-size:80%; text-align:center;">A special day in English class</p>
+<h3 style="txt-align:left;">Hiking</h3>
+<a href="personal/hiking.png" target="_blank"><img src="personal/hiking.png" width="500" height"500"alt="hiking" class="image3"></a>
+<p style="font-size:80%; text-align:center;">Lost in ciudad perdida in Falan, Colombia</p>
+<h3 style="txt-align:left;">Iron Working</h3>
+<a href="personal/ironWorking.png" target="_blank"><img src="personal/ironWorking.png" width="500" height"500"alt="ironWorking" class="image3"></a>
+<p style="font-size:80%; text-align:center;">Wonderful view of the Olympic mountains in Victoria</p>
+<h3 style="txt-align:left;">Study</h3>
+<a href="personal/study.png" target="_blank"><img src="personal/study.png" width="500" height"500"alt="study" class="image3"></a>
+<p style="font-size:80%; text-align:center;">Working on the CO2 sensor research project at North Island College</p>
+<h3 style="txt-align:left;">Traveling</h3>
+<a href="personal/traveling.png" target="_blank"><img src="personal/traveling.png" width="500" height"500"alt="traveling" class="image3"></a>
+<p style="font-size:80%; text-align:center;">Volcan Payaca near Antigua, Guatemala</p>
+<h3 style="txt-align:left;">Videos</h3>
+<a href="personal/videos.png" target="_blank"><img src="personal/videos.png" width="500" height"500"alt="videos" class="image3"></a>
+<p style="font-size:80%; text-align:center;">One of several amateur videos that I have posted on Youtube</p>
+
 
 </div>
 
