--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@ body, html {
 <br>
 <p style="text-align:left;">Here are some photos of me doing some of the things that I am passionate about.</p>
 <h3 style="txt-align:left;">Running</h3>
-<img src="personal/running.png" width="500" height"500"alt="running" class="image3">
+<img src="personal/running.PNG" width="500" height"500"alt="running" class="image3">
 <p style="font-size:80%; text-align:center;">Completing my first full marathon in Medellin, Colombia</p>
 <h3 style="txt-align:left;">Teaching</h3>
 <a href="personal/teaching.png" target="_blank"><img src="personal/teaching.png" width="500" height"500"alt="teaching" class="image3"></a>
