--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ body, html {
 <p style="font-size:80%; text-align:center;">Lost in ciudad perdida in Falan, Colombia</p>
 <h3 style="txt-align:left;">Iron Working</h3>
 <a href="personal/ironWorking.PNG" target="_blank"><img src="personal/ironWorking.PNG" width="500" height"500"alt="ironWorking" class="image3"></a>
-<p style="font-size:80%; text-align:center;">Wonderful view of the Olympic mountains in Victoria</p>
+<p style="font-size:80%; text-align:center;">Wonderful view of the Olympic mountains from Victoria</p>
 <h3 style="txt-align:left;">Study</h3>
 <a href="personal/study.PNG" target="_blank"><img src="personal/study.PNG" width="500" height"500"alt="study" class="image3"></a>
 <p style="font-size:80%; text-align:center;">Working on the CO2 sensor research project at North Island College</p>
