--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@ body, html {
   <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
   <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
   <br>
+  <h3 style="txt-align:left;">Android</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/DvJ-5VBjpG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+    <p style="font-size:80%; text-align:center;">A bit juvenile, I suppose, but practice nonetheless. This is a spam app that can send multiple text messages to multiple recipients instantaneously.</p>
   <h3 style="txt-align:left;">Technical Drawings</h3>
   <img src="technicalDrawings/DieHandSketch.PNG" width="500" height"500"alt="DieHandSketch" class="image3">
   <p style="font-size:80%; text-align:center;">A hand sketch of a common playing die.</p>
