--- a/index.html
+++ b/index.html
@@ -115,8 +115,14 @@ body, html {
   <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
   <br>
   <h3 style="txt-align:left;">Android</h3>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/-g3cO2F-Wu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+  <p style="font-size:80%; text-align:center;">The first app that I made as a part of my Intoduction to Android course at NIC.</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/DvJ-5VBjpG8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
-    <p style="font-size:80%; text-align:center;">A bit juvenile, I suppose, but practice nonetheless. This is a spam app that can send multiple text messages to multiple recipients instantaneously.</p>
+  <p style="font-size:80%; text-align:center;">A bit juvenile, I suppose, but practice nonetheless. This is a spam app that can send multiple text messages to multiple recipients instantaneously.</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/oIGWUwmON64" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+  <p style="font-size:80%; text-align:center;">This is another assignment from NIC, but I put extra time to go above and beyond wiht extra settings and an appealing aesthetics</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/rry0FP8ha-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+  <p style="font-size:80%; text-align:center;">This was a self-assigned project as I studied more Adroid development in my own time. It was to try and include everything that I heard learned, but became very heavy. This app has some potential, I feel, but also needs direction. I would love to continue an app like this if I felt there was a want for one.</p>
   <h3 style="txt-align:left;">Technical Drawings</h3>
   <img src="technicalDrawings/DieHandSketch.PNG" width="500" height"500"alt="DieHandSketch" class="image3">
   <p style="font-size:80%; text-align:center;">A hand sketch of a common playing die.</p>
