--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ body, html {
   <iframe width="560" height="315" src="https://www.youtube.com/embed/VdxbjapIjAY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
   <p style="font-size:80%; text-align:center;">A video of some more basics of Arduino, but a bit more difficult.</p>
   <h3 style="txt-align:left;">Code Examples</h3>
-  <iframe width="560" height="315" src="https://youtu.be/eLTbM2u4q_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/eLTbM2u4q_w" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
   <p style="font-size:80%; text-align:center;">A video displaying some Bash commands, moving through file spaces, and showing code examples of C and Python from course assignments.</p>
 </div>
 
