--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ body, html {
   <p style="font-size:80%; text-align:center;">Proof of TESOL certification. With this I taught English for an extended period in Colombia.</p>
   <a href="certifications/ELASH II.jpg" target="_blank"><img src="certifications/ELASH II.jpg" width="500" height"500"alt="Elash2" class="image3"></a>
   <p style="font-size:80%; text-align:center;">This certification is more important to English instructors whom their first language is not English. However, I received the highest mark of all the instructors at the institute that I worked at.</p>
+  <h3 style="txt-align:left;">UVic Certificates</h3>
   <a href="certifications/FiniteMathCert.jpg" target="_blank"><img src="certifications/FiniteMathCert.jpg" width="500" height"500"alt="FiniteMathCert" class="image3"></a>
   <p style="font-size:80%; text-align:center;">This certification shows that I received an A or higher in Math Logic and Foundations at UVic</p>
 </div>
@@ -255,8 +256,8 @@ body, html {
   <p style="text-align:center;">I am totes norms.</p>
   <p style="text-align:left;">I am currently a Software Engineering student at the University of Victoria
   in British Columbia, Canada. I am 32 years old. I am an avid runnner. I enjoy movies, travelling, socializing, and puzzles.
-   My long term goal is to have a well-payed, remote job where I have significant responsibility
- and I can travel to different countries for months at a time while still pursuing my carrer. For a deeper insight into
+   My long term goal is to have a well-payed, remote job where I have significant responsibility,
+ and I can travel to different countries for months at a time while still pursuing my career. For a deeper insight into
  who I am as a person, you can follow me on the below social medias.</p>
  <br>
 <a href="https://www.youtube.com/channel/UCeIRhuifPM_Tc_NOo99iCbA"><img src="https://logonoid.com/images/thumbs/youtube-logo.png"  alt="YouTube Logo" class="image2" /></a>
