--- a/index.html
+++ b/index.html
@@ -114,6 +114,11 @@ body, html {
   <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
   <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
   <br>
+  <a href="https://www.zakacat.github.io/meetsoup"><img src="NIC.png"  alt="NIC Logo" class="image2" /></a>
+  <p style="text-align:left;">North Island College is a community college on Vancouver Island where I achieved my engineering first year equivalent. I also worked on a couple paid research projects during my time there.</p>
+  <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
+  <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
+  <br>
   <h3 style="text-align:left;">Android</h3>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-g3cO2F-Wu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
   <p style="font-size:80%; text-align:center;">The first app that I made as a part of my Intoduction to Android course at NIC.</p>
