--- a/index.html
+++ b/index.html
@@ -114,7 +114,16 @@ body, html {
   <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
   <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
   <br>
-  <a href="https://www.zakacat.github.io/meetsoup"><img src="NIC.png"  alt="NIC Logo" class="image2" /></a>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <a href="meetsoup.html"><img src="NIC.png"  alt="NIC Logo" class="image2" /></a>
   <p style="text-align:left;">North Island College is a community college on Vancouver Island where I achieved my engineering first year equivalent. I also worked on a couple paid research projects during my time there.</p>
   <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
   <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
