--- a/index.html
+++ b/index.html
@@ -117,16 +117,9 @@ body, html {
   <br>
   <br>
   <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
-  <a href="meetsoup.html"><img src="NIC.png"  alt="NIC Logo" class="image2" /></a>
-  <p style="text-align:left;">North Island College is a community college on Vancouver Island where I achieved my engineering first year equivalent. I also worked on a couple paid research projects during my time there.</p>
-  <a href="https://www.nic.bc.ca/about-us/research/carti/projects/automated-oyster-pouch-flipper/" target="_blank">Aquaculture and an Oyster Flipper</a>
-  <p style="text-align:left;">I was also part of another project invloving the assembly of an ocean CO2 sensor.</p>
+  <a href="meetsoup.html"><img src="meetsouplogo.png"  alt="MeetSoup Logo" class="image2" /></a>
+  <p style="text-align:left;">At UVic, for my SENG 310 Human Computer Interaction course, I was part of a team of 4 who designed and prototyped an app called MeetSoup. The app was an attempt to connect people who had food to give away with people who want free food.</p>
+  <a href="meetsoup.html" target="_blank">MeetSoup Documentation</a>
   <br>
   <h3 style="text-align:left;">Android</h3>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/-g3cO2F-Wu0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="image4"></iframe>
