Added all info to Project Proposal

--- a/meetsoup.html
+++ b/meetsoup.html
@@ -67,6 +67,18 @@ footer {
     flex-direction: column;
   }
 }
+img{
+
+}
+.image1 {
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ float: none;
+ width: 50%;
+ height: 50%;
+ border-radius: 25%;
+}
 </style>
 </head>
 <body>
@@ -103,7 +115,30 @@ footer {
     </ol>
     <p>A feasible way to connect these two types of people and to redirect otherwise wasted food to the people who need it does not currently exist.</p>
     <h1>Motivation</h1>
+    <p>The National Food Waste council determined that Canadian households bore responsibility for 2.3 million tons of food wasted in 2022 [2]. This wasted food severely harms the environment in the form of C02 emissions. Additionally, 5.1 million Canadians resided in households affected by food insecurity in 2021 [3].  The Meet Soup app holds the potential to reduce the following:</p>
+    <p>When food is wasted, it means that the resources used to produce, process, and transport that food are also wasted. Reducing food waste helps businesses and individuals avoid unnecessary expenses associated with purchasing and producing more food than necessary.</p>
+    <p>Finding ways to reduce food waste in our society will help minimize both food insecurity and greenhouse gas emissions from decomposing waste. Methods to reduce food waste are often low cost, free, or will reduce overall food costs.</p>
+    <h1>Solution</h1>
+    <p>We are proposing a location-based web application which allows users to make postings when they have food available that they do not need. Other users will then search through these postings and make a request to pick them up. An example of how the app could be used for an over ripe bananas is outlined in figure 1.</p>
+    <img src="MeetSoupMedia/flowchart1.png" alt="flowchart1" width= 50% align="middle">
+    <p>Figure 1 – Flowchart for 2 types of application users.</p>
+    <p>Users interested in picking up food will browse posts using a map or list-view style, with options for filtering (figure 2). Clicking on a post will show you more details and provide the option to message the poster. A poster will provide information about food being offered, along with a photo (figure 3). Users could set up alerts when certain items are available (figure 4).</p>
+    <img src="MeetSoupMedia/sketch1.jpg" alt="sketch1" width= 50% align="middle">
+    <p>Figure 2 – Sketch outline of the main menu and “Find Food” option.</p>
+    <img src="MeetSoupMedia/sketch2.jpg" alt="sketch1" width= 50% align="middle">
+    <p>Figure 3 – Sketch outline of the “Post Food” option and account page.</p>
+    <img src="MeetSoupMedia/sketch3.jpg" alt="sketch1" width= 50% align="middle">
+    <p>Figure 4 – Sketch outline of the “Alerts” and “Messages” menus.</p>
+    <h1> References</h1>
+    <p>[1] City of Edmonton, “The problem of food waste,” Change for Climate, https://changeforclimate.ca/story/the-problem-of-food-waste (accessed May 23, 2023).</p>
+    <p>[2] S. Naushad, “Food Waste in Canada,” Youth in Food Systems, https://seeds.ca/schoolfoodgardens/food-waste-in-canada-/ (accessed May 24, 2023). </p>
+    <p>[3] “How many Canadians are affected by household food insecurity?,” PROOF, https://proof.utoronto.ca/food-insecurity/how-many-canadians-are-affected-by-household-food-insecurity/ (accessed May 24, 2023).</p>
+
+
 
   </article>
+
+</section>
+<section>
 
 </section>
